navbar and login implemented on frontend

--- a/IASS.Frontend/src/app/layout/layout.component.html
+++ b/IASS.Frontend/src/app/layout/layout.component.html
@@ -1,1 +1,5 @@
-<p>layout works!</p>
+<app-header></app-header>
+
+<div class="container-fluid px-4 mt-4">
+  <router-outlet></router-outlet>
+</div>
