--- a/IASS.Frontend/src/app/views/user-profile/user-profile.component.html
+++ b/IASS.Frontend/src/app/views/user-profile/user-profile.component.html
@@ -3,6 +3,6 @@
     <h2 class="text-uppercase">Your profile</h2>
   </ng-container>
   <div class="row row-cols-1 g-4 mb-4">
-    <app-info-card [profileId]="userId"></app-info-card>
+    <!-- <app-info-card [profileId]="userId"></app-info-card> -->
   </div>
 </div>
