--- a/IASS.Frontend/src/app/views/user-profile/user-profile.component.html
+++ b/IASS.Frontend/src/app/views/user-profile/user-profile.component.html
@@ -1,8 +1,13 @@
-<div class="container my-4">
-  <ng-container>
-    <h2 class="text-uppercase">Your profile</h2>
-  </ng-container>
-  <div class="row row-cols-1 g-4 mb-4">
-    <!-- <app-info-card [profileId]="userId"></app-info-card> -->
+<ng-container *ngIf="userId$ | async as userId">
+  <div class="container my-4">
+    <div class="d-flex justify-content-between">
+        <div class="d-flex align-items-center">
+          <h2 class="text-uppercase">Your profile</h2>
+        </div>
+    </div>
+    <div class="row row-cols-1 g-4 mb-4">
+      <app-info-card [profileId]="userId"></app-info-card>
+      <app-surgery-card [profileId]="userId"></app-surgery-card>
+    </div>
   </div>
-</div>
+</ng-container>
